# todo-cli

./: data.db  main.py  pyproject.toml
todo_cli/: add.py  args.py  db.py  delete.py  get_app_dir.py  help_screen.py  json_db.py  list_tasks.py  mark_tasks.py  update.py
